wk5 lab images update

--- a/Lectures/Week05_ANOVAI_lecture.html
+++ b/Lectures/Week05_ANOVAI_lecture.html
@@ -33,7 +33,7 @@ class: center, middle, inverse, title-slide
 
 
 
-## This Week's Key Topics
+### This Week's Key Topics
 
 + Types of ANOVAs and their assumptions
 
@@ -44,7 +44,7 @@ class: center, middle, inverse, title-slide
 + Conducting a power analysis for ANOVA
 
 ---
-## Moving on from `\(t\)`-tests
+### Moving on from `\(t\)`-tests
 
 MONICA - CHECK THIS...not sure if I currently feel okay about it, because we also need to set up the idea of post-hocs. Maybe compare it to using a shoe to hammer a nail?
 
@@ -69,9 +69,157 @@ MONICA - CHECK THIS...not sure if I currently feel okay about it, because we als
 + When you run multiple tests when a single test would do, you're inflating the risk of making a Type I error.
 
 ---
-## ANOVA
+### The Logic Behind ANOVA
 
-+ ANOVAs produce an `\(F\)`-statistic that reflects the ratio of the variation in the dependent variable explained by our independent variable(s) and the variation explained by other unmeasured factors.
+.pull-left[
+
++ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-2-1.svg)&lt;!-- --&gt;
+
+]
+
+
+---
+count: false
+
+### The Logic Behind ANOVA
+
+.pull-left[
+
++ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
+
++ The mean represents some individuals well, but not others. 
+
+
+&lt;br&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-3-1.svg)&lt;!-- --&gt;
+]
+
+---
+### The Logic Behind ANOVA
+
+.pull-left[
+
++ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
+
++ The mean represents some individuals well, but not others. 
+
+&lt;br&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-4-1.svg)&lt;!-- --&gt;
+]
+
+.pull-right[
+
++ Often, researchers are testing whether they can more accurately capture variation in the dependent variable using the independent variable(s).
+
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-5-1.svg)&lt;!-- --&gt;
+
+]
+
+
+---
+### The Logic Behind ANOVA
+
+.pull-left[
+
++ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
+
++ The mean represents some individuals well, but not others. 
+
+&lt;br&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-6-1.svg)&lt;!-- --&gt;
+]
+
+.pull-right[
+
++ Often, researchers are testing whether they can more accurately capture variation in the dependent variable using the independent variable(s).
+
++ ANOVAs test whether the IV does a significantly better job than the mean of modeling variance in the DV
+
+
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-7-1.svg)&lt;!-- --&gt;
+
+]
+
+---
+### The Logic Behind ANOVA
+
+
+`$$F = \frac{MS_{model}}{MS_{residual}}$$`
+
++ ANOVAs produce an `\(F\)`-statistic that is the ratio of the variation in the DV explained by our IV(s) and the variation explained by other unmeasured factors.
+
+
++ `\(MS_{model} = \frac{SS_{model}}{df_{model}}\)` - reflects the variation in DV explained by the IV
+
+  + AKA `\(MS_{between}\)` or `\(MS_{treatment}\)`
+
++ `\(MS_{residual} = \frac{SS_{residual}}{df_{residual}}\)` - reflects the variation in DV unexplained by IV
+
+  + AKA `\(MS_{within}\)` or `\(MS_{error}\)`
+
+--
+
++ Recall the sum of squared deviations from the [standard deviation calculation in Week 1](https://mtruelovehill.github.io/PRM/Lectures/Week01_ExploringData_Lecture.html#37). 
+
++ Here, the sums of squares (SS) is once again referring to a sum of squared distances between values.
+
+---
+### The Logic Behind ANOVA
+
+
+.pull-left[
+.center[** `\(SS_{model}\)` **
+
+
+]
+
++ Difference between grand mean and IV group means of the DV
+
++ Reflects the variance in the DV explained by IV over and above the mean
+
+
+]
+
+--
+
+.pull-right[
+.center[ ** `\(SS_{residual}\)` **
+
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-9-1.svg)&lt;!-- --&gt;
+]
+
++ Difference between IV group means of the DV and the observed data
+
++ Reflects the amount of variation left unexplained by the IV
+]
+
+---
+### Calculating `\(F\)`
+
+.pull-left[
+`$$F = \frac{\color{#4CA384}{MS_{model}}}{MS_{residual}}$$`
+
+`\(MS_{model} = \frac{SS_{model}}{df_{model}}\)`
+]
+
+.pull-right[
+
+
+]
++ MONICA - USE PREVIOUS PLOTS TO DEMONSTRATE HOW F IS CALCULATED (AS WITH STANDARD DEVIATION IN WEEK 1)
+
+---
+### Types of ANOVA
 
 + ANOVAs can be used to compare more than two means. 
 
@@ -90,7 +238,7 @@ MONICA - CHECK THIS...not sure if I currently feel okay about it, because we als
   + At least one categorical independent variable with three or more levels
 
 ---
-## ANOVA
+### ANOVA
 
 + Running an ANOVA involves:
 
@@ -99,47 +247,37 @@ MONICA - CHECK THIS...not sure if I currently feel okay about it, because we als
   + Calculating the probability of obtaining our value of `\(F\)` if the null were true
 
   + Using this probability to make a decision whether to reject the null hypothesis
-  
----
-## Calculating `\(F\)`
 
-`$$F = \frac{MS_{between}}{MS_{within}}$$`
-
-+ Although there are 3 types of `\(t\)`-tests, they generally involve some form of the following calculation:
-
-`$$t = \frac{Observed\ Mean(s) - What\ we\ expect\ if\ null\ is\ true}{Some\ combination\ of\ the\ SE}$$`
 
 ---
-## One-Way ANOVA
+### One-Way ANOVA
 
-`$$t = \frac{\bar{x}-\mu_0}{SE_\bar{x}}$$`
-+ Compare a sample mean ( `\(\bar{x}\)` ) and a known mean ( `\(\mu_0\)` )
++ Compare the mean of the dependent variable across multiple levels of a single independent variable
 
-+ Used to check whether your sample's mean is significantly different from a known value
++ Each level of the independent variable reflects an independent sample
+
++ CHECK WHETHER THIS COULD BE PHRASED BETTER Tests whether there is a difference between at least one pair of levels
 
 --
 
-+ **Example research questions:**
++ **Example research questions:** [CHANGE THESE TO MATCH ANOVA]
 
   + Are speeds along Road A significantly higher than the speed limit?
   
   + Do a beauty product's results last longer than 3 months?
 
 ---
-## Independent-samples `\(t\)`-test
+### Repeated-Measures ANOVA
 
-`$$t = \frac{(\bar{x_1}-\bar{x_2})-(\mu_1 - \mu_2)}{\sqrt{\frac{s_p^2}{n_1}+\frac{s_p^2}{n2}}}$$`
-`\(s_p^2\)`: a pooled variance estimate that weights variance by sample size
++ Compare the mean of the dependent variable across multiple levels of a single independent variable
 
---
++ Each member of the sample provided data for all levels of the independent variable
 
-+ Compares the mean of group 1 ( `\(\bar{x_1}\)` ) to the mean of group 2 ( `\(\bar{x_2}\)` )
-
-+ Used to determine whether there is a difference between two independently measured groups
++ CHECK WHETHER THIS COULD BE PHRASED BETTER Tests whether there is a difference between at least one pair of levels
 
 --
 
-+ **Example research questions:**
++ **Example research questions:** [CHANGE THESE TO MATCH ANOVA]
 
   + Are there differences in symptoms between the treatment group and the group that received a placebo?
   
@@ -147,51 +285,10 @@ MONICA - CHECK THIS...not sure if I currently feel okay about it, because we als
   
   + Are there differences in TBI rate between boxers and Muay Thai fighters?
   
----
-## Paired-samples `\(t\)`-test
-
-
-`$$t = \frac{\bar{d}-\mu_d}{SE_\bar{d}}$$`
-
-
-+ where:
-
-  + `\(\bar{d}\)`: the mean of the individual difference scores (e.g. `\(d_i = x_{i1} - x_{i2}\)`)
-
-  + `\(\mu_d\)`: The hypothesised null mean difference
-
-  + `\(SE_\bar{d} = \frac{sd_\bar{d}}{\sqrt{n}}\)`
-
---
-
-+ Compares the mean of the same group of participants across two timepoints/conditions
-
---
-
-+ **Example research questions:**
-
-  + Does time of day affect one's attention span?
-  
-  + Is a new fitness routine effective in improving one's cardiovascular health?
 
 
 ---
-## The `\(t\)` distribution
-
-.pull-left[
-+ The `\(t\)`-distribution is the null distribution against which our calculated `\(t\)`-value is compared. 
-
-+ The shape of the `\(t\)`-distribution depends on the degrees of freedom ( `\(df\)` ) of our data.
-]
-
-.pull-right[
-
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-2-1.svg)&lt;!-- --&gt;
-
-]
-
----
-## Degrees of freedom
+### Degrees of freedom
 
 .pull-left[
 
@@ -209,7 +306,7 @@ Imagine we have a set of 3 values and we know that the mean is 4. In this case, 
 ---
 count: false
 
-## Degrees of freedom
+### Degrees of freedom
 
 .pull-left[
 
@@ -235,25 +332,27 @@ count: false
 
 
 ---
-## The `\(F\)` distribution
+### The `\(F\)` distribution
 
 .pull-left[
 + The `\(F\)`-distribution is the null distribution against which our calculated `\(F\)`-statistic is compared. 
 
 + Like the `\(t\)` distribution, the shape of the `\(F\)`-distribution depends on the degrees of freedom in our data.
 
-+ Note that `\(F\)` will never be less than 0. Values of 0 or 1 are most common in the null distribution, with values farther from than 1 increasingly less likely.
++ Values of 0 or 1 are most common in the null distribution, with values farther from than 1 increasingly less likely.
+
++ Note that `\(F\)` will never be less than 0. 
 
 ]
 
 .pull-right[
 
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-3-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-10-1.svg)&lt;!-- --&gt;
 
 ]
 
 ---
-## Putting it all together
+### Putting it all together
 
 .pull-left[
 Basically:
@@ -269,17 +368,17 @@ Basically:
 --
 
 .pull-right[
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-4-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-11-1.svg)&lt;!-- --&gt;
 ]
 
 ---
 class: center, inverse, middle
 
-## Questions?
+### Questions?
 
 ---
 
-### Conducting a `\(t\)`-test...or really, most inferential statistical tests
+### Conducting an ANOVA
 
 1. State your hypothesis
 
@@ -298,7 +397,7 @@ class: center, inverse, middle
 8. Report
 
 ---
-# MONICA EDIT - hypotheses
+### MONICA EDIT - hypotheses
 
 + null is that `\(\mu_1 = \mu_2 =...\mu_n\)`
 + at least one `\(\mu\)` is different from the other `\(\mu\)`s
@@ -307,15 +406,15 @@ Monica - show a plot that shows how if even one group is significantly different
 
 
 ---
-## One-Tailed vs Two-Tailed Tests
+### One-Tailed vs Two-Tailed Tests
 
 .pull-left[
 .center[**One-Tailed**: hypothesis is *directional*
 
 
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-5-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-12-1.svg)&lt;!-- --&gt;
 
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-6-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-13-1.svg)&lt;!-- --&gt;
 ]]
 
 --
@@ -324,11 +423,11 @@ Monica - show a plot that shows how if even one group is significantly different
 .center[**Two-Tailed**: hypothesis is *nondirectional*]
 
 
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-7-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-14-1.svg)&lt;!-- --&gt;
 ]
 
 ---
-## Assumptions of `\(t\)`-tests
+### Assumptions of `\(t\)`-tests
 
 + **Normality:** Dependent data should be normally distributed
   
@@ -336,15 +435,15 @@ Monica - show a plot that shows how if even one group is significantly different
 
 .pull-left[
 .center[**Normally Distributed**]
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-8-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-15-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
 .center[**Not so normally distributed**]
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-9-1.svg)&lt;!-- --&gt;![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-9-2.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-16-1.svg)&lt;!-- --&gt;![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-16-2.svg)&lt;!-- --&gt;
 ]
 ---
-## Assumptions of `\(t\)`-tests
+### Assumptions of `\(t\)`-tests
 
 + **Normality:** Dependent data should be normally distributed
   
@@ -358,17 +457,17 @@ Monica - show a plot that shows how if even one group is significantly different
 
 .pull-left[
 .center[**Equal Variance**]
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-10-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-17-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
 .center[**Not So Equal Variance**]
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-11-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-18-1.svg)&lt;!-- --&gt;
 ]
 
 ---
 
-## Effect size - Cohen's `\(d\)`
+### Effect size - Cohen's `\(d\)`
 
 + Cohen's `\(d\)` is the standardized difference between the means
 
@@ -393,7 +492,7 @@ Monica - show a plot that shows how if even one group is significantly different
 
 ---
 
-## Interpretation of Cohen's `\(d\)`
+### Interpretation of Cohen's `\(d\)`
 
 + Proposed by Cohen (1998):
 
@@ -408,12 +507,12 @@ Monica - show a plot that shows how if even one group is significantly different
 
 ---
 exclude: true
-## Effect size - Cohen's `\(d\)`
+### Effect size - Cohen's `\(d\)`
 
 + Works best for larger samples...for smaller samples (&lt;50), it overinflates results **MONICA, VERIFY THIS**
 
 ---
-## Checking Power
+### Checking Power
 
 + Recall that power usually involves some combination of the following values:
   
@@ -430,10 +529,10 @@ exclude: true
 ---
 class: middle, inverse, center
 
-## Questions?
+### Questions?
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 1: State Your Hypotheses**
 
@@ -465,7 +564,7 @@ class: middle, inverse, center
 
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 2: Conduct a Power Analysis**
 
@@ -490,7 +589,7 @@ class: middle, inverse, center
 
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 4: Check Assumptions**
 
@@ -514,7 +613,7 @@ class: middle, inverse, center
   
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 5: Run the test**
 
@@ -523,14 +622,14 @@ class: middle, inverse, center
 Let's continue in SPSS...
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 7: Interpret results**
 
 &lt;img src="images/BPDesc.png" width="1357" /&gt;
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 7: Interpret results**
 
@@ -539,11 +638,11 @@ Let's continue in SPSS...
 --
 
 .center[
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-14-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-21-1.svg)&lt;!-- --&gt;
 ]
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 7: Interpret results**
 
@@ -563,7 +662,7 @@ Let's continue in SPSS...
 
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 8: Report**
 
@@ -585,7 +684,7 @@ Let's continue in SPSS...
 
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 8: Report**
 
@@ -598,7 +697,7 @@ Note number of decimal places and use of italics and brackets
 Although it's not here in the results, you'll also need to specify `\(\alpha\)`
 
 ---
-## Running an Independent-Samples `\(t\)`-Test
+### Running an Independent-Samples `\(t\)`-Test
 
 **Step 8: Report**
 
@@ -611,7 +710,7 @@ Although it's not here in the results, you'll also need to specify `\(\alpha\)`
 ]
 
 .pull-right[
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-16-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-23-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -619,10 +718,10 @@ Although it's not here in the results, you'll also need to specify `\(\alpha\)`
 count: false
 class: center, inverse, middle
 
-## Questions?
+### Questions?
 
 ---
-## Running a paired-samples `\(t\)`-test
+### Running a paired-samples `\(t\)`-test
 
 **Step 1: State Your Hypotheses**
 
@@ -650,7 +749,7 @@ class: center, inverse, middle
 
 
 ---
-## Running a paired-samples `\(t\)`-test
+### Running a paired-samples `\(t\)`-test
 
 **Step 2: Conduct a Power Analysis**
 
@@ -712,7 +811,7 @@ Again, let's continue in SPSS...
 --
 
 .center[
-![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-19-1.svg)&lt;!-- --&gt;
+![](Week05_ANOVAI_lecture_files/figure-html/unnamed-chunk-26-1.svg)&lt;!-- --&gt;
 ]
 
 ---
